--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 ################################################################################
 
 *.vsidx
+/iTEMS/obj/Debug/net8.0/apphost.exe
+/iTEMS/obj/Debug/net8.0/iTEMS.AssemblyInfo.cs
+/iTEMS/obj/Debug/net8.0/iTEMS.AssemblyInfoInputs.cache
+/iTEMS/obj/project.nuget.cache
+/iTEMS/obj/project.assets.json
+/iTEMS/obj/iTEMS.csproj.nuget.g.props
+/iTEMS/obj/iTEMS.csproj.nuget.dgspec.json
+/iTEMS/obj/Debug/net8.0/iTEMS.GeneratedMSBuildEditorConfig.editorconfig
+/iTEMS/obj/Debug/net8.0/iTEMS.csproj.AssemblyReference.cache
+/iTEMS/obj/Debug/net8.0/iTEMS.assets.cache
