--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /iTEMS/obj/Debug/net8.0/staticwebassets.build.json
 /iTEMS/obj/Debug/net8.0/staticwebassets.development.json
 /iTEMS/obj/Debug/net8.0/staticwebassets.pack.json
+/.vs/iTEMS/DesignTimeBuild/.dtbcache.v2
+/iTEMS/obj/Debug/net8.0/project.razor.vs.bin
