--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 *.vsidx
+/iTEMS/obj/Debug/net8.0/iTEMS.AssemblyInfo.cs
+/iTEMS/obj/Debug/net8.0/iTEMS.assets.cache
+/iTEMS/obj/Debug/net8.0/iTEMS.AssemblyInfoInputs.cache
+/iTEMS/obj/Debug/net8.0/iTEMS.GeneratedMSBuildEditorConfig.editorconfig
