--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,20 @@
 /iTEMS/obj/Debug/net8.0/iTEMS.GeneratedMSBuildEditorConfig.editorconfig
 /iTEMS/obj/Debug/net8.0/iTEMS.csproj.AssemblyReference.cache
 /iTEMS/obj/Debug/net8.0/iTEMS.assets.cache
+/.vs/iTEMS/v17/.suo
+/.vs/iTEMS/v17/DocumentLayout.json
+/iTEMS/bin/Debug/net8.0/iTEMS.dll
+/iTEMS/bin/Debug/net8.0/iTEMS.exe
+/iTEMS/bin/Debug/net8.0/iTEMS.pdb
+/iTEMS/bin/Debug/net8.0/iTEMS.staticwebassets.runtime.json
+/iTEMS/obj/Debug/net8.0/ref/iTEMS.dll
+/iTEMS/obj/Debug/net8.0/refint/iTEMS.dll
+/iTEMS/obj/Debug/net8.0/iTEMS.csproj.CoreCompileInputs.cache
+/iTEMS/obj/Debug/net8.0/iTEMS.csproj.FileListAbsolute.txt
+/iTEMS/obj/Debug/net8.0/iTEMS.dll
+/iTEMS/obj/Debug/net8.0/iTEMS.genruntimeconfig.cache
+/iTEMS/obj/Debug/net8.0/iTEMS.pdb
+/iTEMS/obj/Debug/net8.0/iTEMS.sourcelink.json
+/iTEMS/obj/Debug/net8.0/staticwebassets.build.json
+/iTEMS/obj/Debug/net8.0/staticwebassets.development.json
+/iTEMS/obj/Debug/net8.0/staticwebassets.pack.json
