--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /iTEMS/obj/Debug/net8.0/iTEMS.assets.cache
 /iTEMS/obj/Debug/net8.0/iTEMS.AssemblyInfoInputs.cache
 /iTEMS/obj/Debug/net8.0/iTEMS.GeneratedMSBuildEditorConfig.editorconfig
+/iTEMS/obj/Debug/net8.0/apphost.exe
