Changed-Priority-To-Enum

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@
 /iTEMS/obj/Debug/net8.0/staticwebassets.pack.json
 /.vs/iTEMS/DesignTimeBuild/.dtbcache.v2
 /iTEMS/obj/Debug/net8.0/project.razor.vs.bin
+/.vs/iTEMS/v17/.futdcache.v2
+/.vs/iTEMS/v17/fileList.bin
+/.vs/ProjectEvaluation/items.metadata.v7.bin
+/.vs/ProjectEvaluation/items.projects.v7.bin
