Add Landing Page

--- a/iTEMS/appsettings.json
+++ b/iTEMS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\sqlexpress;Initial Catalog=iTEMS;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=Arvindh-DESKTOP\\SQLEXPRESS;Initial Catalog=iTEMS;Persist Security Info=True;User ID=iTEMSDB;Password=***********;Trust Server Certificate=True"
   },
   "Logging": {
     "LogLevel": {
