--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@
 /iTEMS/obj/Debug/net8.0/staticwebassets/msbuild.iTEMS.Microsoft.AspNetCore.StaticWebAssets.props
 /.gitignore
 /iTEMS/appsettings.json
+/iTEMS/bin/Debug/net8.0/appsettings.json
